minor cleaning, bough_items, + some Readme todo check list improvement

--- a/test/dummy/test/fixtures/items.yml
+++ b/test/dummy/test/fixtures/items.yml
@@ -5,6 +5,11 @@ mug:
   name: MUG
   price: 6.00
 
+mug_1:
+  code: mug
+  name: Shire forever
+  price: 10.00
+
 tshirt:
   code: tshirt
   name: FOREVER
