--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
     - name: Run the default task
-      run: bundle exec rails test
+      run: bundle exec rake db:migrate:reset && bundle exec rake test
     env:
       DB_HOST: localhost
       DB_PASSWORD: postgres
