--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Run the default task
       run: bundle exec rake db:migrate:reset && bundle exec rake test
     env:
+      RAILS_ENV: test
       DB_HOST: localhost
       DB_PASSWORD: postgres
       DB_USER: postgres
